--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
   <title>Booki</title>
 </head>
 <body>
-  <ul>
-    <li><a class="menu" href="#">Accomodations</a></li>
-    <li><a class="menu" href="#">Activities</a></li>
-  </ul>
- 
+  <div class="header">
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">
+                <img src="assest/images/logo/Booki.png" width="100px" alt="LOGO">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Product</a></li>
+                </ul>
+            </nav>
+            <img src="img/logo2.png" width="25px" height="25px">
+    </div>
 </body>
 </html>
