--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </nav>
         </div>
         <div class="row">
-          <div class="col-2">
+          <div>
             <h2>Find a place for your dream vacation</h2> 
             <p>Downtown or in nature</p>  
-          </div>  
-        </div> 
+          </div> 
+        </div>  
     </div>
 </body>
 </html>
