--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booki</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css" integrity="sha384-z4tVnCr80ZcL0iufVdGQSUzNvJsKjEtqYZjiQrrYKlpGow+btDHDfQWkFjoaz/Zr" crossorigin="anonymous">
+    <title>Booki</title>
 </head>
 <body>
   <div class="header">
@@ -26,11 +26,21 @@
                 </ul>
             </nav>
         </div>
-        <div class="row">
+        <div class class="row">
           <div>
             <h2>Find a place for your dream vacation</h2> 
             <p>Downtown or in nature</p>  
           </div> 
+        </div>
+        <div class="topnav">
+          <i class="fa-solid fa-location-dot"></i>
+          <div class="search-container">
+            <form>
+              <input type="text" placeholder="Marsellie, France" name="search">
+              <button type="submit" >Search</button>
+            </form>
+          </div>
+        </div>
     </div>
 </body>
 </html>
