--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
           </div> 
         </div>
         <div class="topnav">
-          <i class="fa-solid fa-location-dot"></i>
+          <label class="label-container">
+            <i class="fa-solid fa-location-dot"></i>
+          </label>
           <div class="search-container">
             <form>
-              <input type="text" placeholder="Marsellie, France" name="search">
+              <input type="text" placeholder=" Marseille, France">
               <button type="submit" >Search</button>
             </form>
           </div>
