--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
             </form>
           </div>
         </div>
+        <div class="filter">
+          <h4>Filters</h4>
+          <form>
+            <label class="label-filter">
+              <i class="fa-solid fa-money-bill"></i>
+            </label>
+          </form>
+
+        </div>
+        
+
     </div>
 </body>
 </html>
