--- a/index.html
+++ b/index.html
@@ -43,13 +43,26 @@
             </form>
           </div>
         </div>
-        <div class="filter">
-          <h4>Filters</h4>
-          <form>
-            <label class="label-filter">
-              <i class="fa-solid fa-money-bill"></i>
-            </label>
-          </form>
+          <section>
+            <div class="filter">
+              <h4>Filters</h4>
+            <div class="filterbox">
+              <label class="label-filter">
+                <i class="fa-solid fa-money-bill"></i>
+              <label class="label-filter-row">
+                <h4>Low Cost</h4>
+              </label>  
+              <label class="label-filter">
+                <i class="fa-solid fa-person"></i>
+              </label>  
+              <label class="label-filter">
+                <i class="fa-solid fa-heart"></i>
+              </label>
+              <label class="label-filter">
+                <i class="fa-solid fa-dog"></i>
+              </label>
+            </div>  
+          </section>
 
         </div>
         
