para under filter done

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             </ol>    
           </div>
       </div>
+      <div class="parag">
+        <label><i class="fa-thin fa-circle-info"></i></label>
+        <p>More than 500 accomodations are available in this city</p>
+      </div>
     </div>
 </body>
 </html>
