start accomodation html

--- a/index.html
+++ b/index.html
@@ -68,9 +68,64 @@
           </div>
       </div>
       <div class="parag">
-        <label><i class="fa-thin fa-circle-info"></i></label>
+        <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
       </div>
-    </div>
+      <!----- Accomodation section ----->
+    <section>
+      <div class="small-container">
+        <h2 class="title">Featured Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="img/8.jpg" alt="">
+                <h4>+60 Skin Care Products</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>   
+                </div>
+                <p>£80</p>
+            </div>
+            <div class="col-4">
+                <img src="img/7.jpg" alt="">
+                <h4>+50 Skin Care Products</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>   
+                    <span class="fa fa-star checked"></span>
+                </div>
+                <p>£70</p>
+            </div>
+            <div class="col-4">
+                <img src="img/6.jpg" alt="">
+                <h4>+40 Skin Care Products</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>   
+                </div>
+                <p>£60</p>
+            </div>
+            <div class="col-4">
+                <img src="img/5.jpg" alt="">
+                <h4>+30 Skin Care Products</h4>
+                <div class="rating">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star-half-o checked"></span>   
+                </div>
+                <p>£50</p>
+            </div>
+        </div>  
+    </section>  
+  </div>
 </body>
 </html>
