--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         <p>More than 500 accomodations are available in this city</p>
       </div>
       <!----- Accomodation section ----->
-    <section>
+    <section class="big-conainer">
+      <h3 class="title">Accomodations in Marseille</h3>
       <div class="small-container">
-        <h2 class="title">Featured Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="img/8.jpg" alt="">
-                <h4>+60 Skin Care Products</h4>
+                <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                <h4></h4>
                 <div class="rating">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -86,11 +86,11 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>   
                 </div>
-                <p>£80</p>
+                <p>£</p>
             </div>
             <div class="col-4">
-                <img src="img/7.jpg" alt="">
-                <h4>+50 Skin Care Products</h4>
+                <img src="assest/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                <h4></h4>
                 <div class="rating">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -98,11 +98,11 @@
                     <span class="fa fa-star checked"></span>   
                     <span class="fa fa-star checked"></span>
                 </div>
-                <p>£70</p>
+                <p>£</p>
             </div>
             <div class="col-4">
-                <img src="img/6.jpg" alt="">
-                <h4>+40 Skin Care Products</h4>
+                <img src="assest/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                <h4></h4>
                 <div class="rating">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -110,11 +110,11 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>   
                 </div>
-                <p>£60</p>
+                <p>£</p>
             </div>
             <div class="col-4">
-                <img src="img/5.jpg" alt="">
-                <h4>+30 Skin Care Products</h4>
+                <img src="assest/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                <h4></h4>
                 <div class="rating">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -122,8 +122,32 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star-half-o checked"></span>   
                 </div>
-                <p>£50</p>
+                <p>£</p>
             </div>
+            <div class="col-4">
+              <img src="assest/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+              <h4></h4>
+              <div class="rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star-half-o checked"></span>   
+              </div>
+              <p>£</p>
+          </div>
+          <div class="col-4">
+            <img src="assest/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+            <h4></h4>
+            <div class="rating">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star-half-o checked"></span>   
+            </div>
+            <p>£</p>
+        </div>
         </div>  
     </section>  
   </div>
