big container start to set positions

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
         <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
       </div>
-      <!----- Accomodation section ----->
-    <section class="big-conainer">
+    <!----- Accomodation section ----->
+    <section class="big-container">
       <h3 class="title">Accomodations in Marseille</h3>
-      <div class="small-container">
         <div class="row">
             <div class="col-4">
                 <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
