done the big container position

--- a/index.html
+++ b/index.html
@@ -71,73 +71,52 @@
         <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
       </div>
+    </div>  
     <!----- Accomodation section ----->
-    <section class="big-container">
-      <h3 class="title">Accomodations in Marseille</h3>
-        <div class="row">
-            <div class="col-4">
-                <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-                <h4></h4>
-                <div class="rating">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>   
-                </div>
-                <p>£</p>
+    <section class="center-container">
+      <div class="title">
+        <h3>Accomodations in Marseille</h3>
+      </div> 
+     <div class="small-container">      
+        <div class="col">
+            <img src="img/8.jpg" alt="">
+            <h4>+60 Skin Care Products</h4>
+            <div class="rating">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>   
             </div>
-            <div class="col-4">
-                <img src="assest/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
-                <h4></h4>
-                <div class="rating">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>   
-                    <span class="fa fa-star checked"></span>
-                </div>
-                <p>£</p>
+            <p>£80</p>
+        </div>
+        <div class="col">
+            <img src="img/7.jpg" alt="">
+            <h4>+50 Skin Care Products</h4>
+            <div class="rating">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>   
+                <span class="fa fa-star checked"></span>
             </div>
-            <div class="col-4">
-                <img src="assest/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
-                <h4></h4>
-                <div class="rating">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>   
-                </div>
-                <p>£</p>
+            <p>£70</p>
+        </div>
+        <div class="col">
+            <img src="img/6.jpg" alt="">
+            <h4>+40 Skin Care Products</h4>
+            <div class="rating">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>   
             </div>
-            <div class="col-4">
-                <img src="assest/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
-                <h4></h4>
-                <div class="rating">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star-half-o checked"></span>   
-                </div>
-                <p>£</p>
-            </div>
-            <div class="col-4">
-              <img src="assest/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
-              <h4></h4>
-              <div class="rating">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star-half-o checked"></span>   
-              </div>
-              <p>£</p>
-          </div>
-          <div class="col-4">
-            <img src="assest/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-            <h4></h4>
+            <p>£60</p>
+        </div>
+        <div class="col">
+            <img src="img/5.jpg" alt="">
+            <h4>+30 Skin Care Products</h4>
             <div class="rating">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -145,10 +124,34 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star-half-o checked"></span>   
             </div>
-            <p>£</p>
+            <p>£50</p>
         </div>
-        </div>  
-    </section>  
-  </div>
+        <div class="col">
+          <img src="img/6.jpg" alt="">
+          <h4>+40 Skin Care Products</h4>
+          <div class="rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>   
+          </div>
+          <p>£60</p>
+      </div>
+      <div class="col">
+          <img src="img/5.jpg" alt="">
+          <h4>+30 Skin Care Products</h4>
+          <div class="rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star-half-o checked"></span>   
+          </div>
+          <p>£50</p>
+      </div>
+    </div>
+    </div>
+  </section>  
 </body>
 </html>
