--- a/index.html
+++ b/index.html
@@ -73,21 +73,23 @@
       </div>
     </div>  
     <!----- Accomodation section ----->
-    <section class="center-container">
+    <section class="center-container"> 
       <div class="title">
-        <h3>Accomodations in Marseille</h3>
+        <h3>Accomodations in Marseille</h3> 
       </div> 
-     <div class="small-container">      
+     <div class="big-container">   
         <div class="col">
-            <img src="img/8.jpg" alt="">
+            <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
             <h4>+60 Skin Care Products</h4>
-            <div class="rating">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>   
-            </div>
+            <span class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </span>
+            <span class="empty-star">
+              <i class="fa-solid fa-star "></i>
+            </span>
             <p>£80</p>
         </div>
         <div class="col">
@@ -149,9 +151,37 @@
               <span class="fa fa-star-half-o checked"></span>   
           </div>
           <p>£50</p>
+        </div>
+        </div>
       </div>
-    </div>
-    </div>
+      <div class="col">
+            <img src="img/5.jpg" alt="">
+            <h4>+30 Skin Care Products</h4>
+            <div class="rating">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star-half-o checked"></span>   
+            </div>
+            <p>£50</p>
+        </div>
+        <div class="col">
+          <img src="img/6.jpg" alt="">
+          <h4>+40 Skin Care Products</h4>
+          <div class="rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>   
+          </div>
+          <p>£60</p>
+      </div>
+      <div class="small-container">
+        
+      </div> 
+
   </section>  
 </body>
 </html>
