--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
      <div class="big-container">   
         <div class="col">
             <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-            <h4>+60 Skin Care Products</h4>
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
             <span class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -90,67 +91,76 @@
             <span class="empty-star">
               <i class="fa-solid fa-star "></i>
             </span>
-            <p>£80</p>
         </div>
         <div class="col">
-            <img src="img/7.jpg" alt="">
-            <h4>+50 Skin Care Products</h4>
-            <div class="rating">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>   
-                <span class="fa fa-star checked"></span>
-            </div>
-            <p>£70</p>
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+            <i class="fa-solid fa-star "></i>
+          </span>
         </div>
         <div class="col">
-            <img src="img/6.jpg" alt="">
-            <h4>+40 Skin Care Products</h4>
-            <div class="rating">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>   
-            </div>
-            <p>£60</p>
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+            <i class="fa-solid fa-star "></i>
+          </span>
         </div>
         <div class="col">
-            <img src="img/5.jpg" alt="">
-            <h4>+30 Skin Care Products</h4>
-            <div class="rating">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star-half-o checked"></span>   
-            </div>
-            <p>£50</p>
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+            <i class="fa-solid fa-star "></i>
+         </span>
         </div>
         <div class="col">
-          <img src="img/6.jpg" alt="">
-          <h4>+40 Skin Care Products</h4>
-          <div class="rating">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>   
-          </div>
-          <p>£60</p>
-      </div>
-      <div class="col">
-          <img src="img/5.jpg" alt="">
-          <h4>+30 Skin Care Products</h4>
-          <div class="rating">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star-half-o checked"></span>   
-          </div>
-          <p>£50</p>
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+            <i class="fa-solid fa-star "></i>
+          </span>
+        </div>
+        <div class="col">
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+            <i class="fa-solid fa-star "></i>
+          </span>
         </div>
         </div>
       </div>
