--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       </div>
     </div>  
     <!----- Accomodation section ----->
-    <section class="center-container"> 
+    <section class="center-container">  
+     <div class="left-container">  
       <div class="title">
         <h3>Accomodations in Marseille</h3> 
       </div> 
-     <div class="big-container">   
         <div class="col">
             <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
             <h4>Auberge la Cannebeire</h4>
