--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     </div>  
     <!----- Accomodation section ----->
     <section class="center-container">  
-     <div class="left-container">  
       <div class="title">
         <h3>Accomodations in Marseille</h3> 
-      </div> 
+      </div>
+     <div class="left-container">   
         <div class="col">
             <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
             <h4>Auberge la Cannebeire</h4>
@@ -164,34 +164,50 @@
         </div>
         </div>
       </div>
-      <div class="col">
-            <img src="img/5.jpg" alt="">
-            <h4>+30 Skin Care Products</h4>
-            <div class="rating">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star-half-o checked"></span>   
-            </div>
-            <p>£50</p>
+      <div class="right-container">
+        <div class="col">
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+            <i class="fa-solid fa-star "></i>
+          </span>
         </div>
         <div class="col">
-          <img src="img/6.jpg" alt="">
-          <h4>+40 Skin Care Products</h4>
-          <div class="rating">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>   
-          </div>
-          <p>£60</p>
-      </div>
-      <div class="small-container">
-        
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+           <i class="fa-solid fa-star "></i>
+          </span>
+        </div>
+        <div class="col">
+          <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+          <h4>Auberge la Cannebeire</h4>
+          <p>Night starting at <strong>25£</strong></p>
+          <span class="star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </span>
+          <span class="empty-star">
+           <i class="fa-solid fa-star "></i>
+          </span>
+        </div>
       </div> 
-
-  </section>  
+    </section>  
 </body>
 </html>
