--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div class="right-container">
-        <div class="col">
+        <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
           <h4>Auberge la Cannebeire</h4>
           <p>Night starting at <strong>25£</strong></p>
@@ -179,7 +179,7 @@
             <i class="fa-solid fa-star "></i>
           </span>
         </div>
-        <div class="col">
+        <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
           <h4>Auberge la Cannebeire</h4>
           <p>Night starting at <strong>25£</strong></p>
@@ -193,7 +193,7 @@
            <i class="fa-solid fa-star "></i>
           </span>
         </div>
-        <div class="col">
+        <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
           <h4>Auberge la Cannebeire</h4>
           <p>Night starting at <strong>25£</strong></p>
