2 coloumn position set

--- a/index.html
+++ b/index.html
@@ -167,45 +167,51 @@
       <div class="right-container">
         <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-            <i class="fa-solid fa-star "></i>
-          </span>
-        </div>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+            <span class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            <span class="empty-star">
+             <i class="fa-solid fa-star "></i>
+            </span>
+            </span>
+          </div>
+        </div>  
         <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-           <i class="fa-solid fa-star "></i>
-          </span>
-        </div>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+            <span class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            <span class="empty-star">
+             <i class="fa-solid fa-star "></i>
+            </span>
+            </span>
+          </div>
+        </div>  
         <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
-          <span class="star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </span>
-          <span class="empty-star">
-           <i class="fa-solid fa-star "></i>
-          </span>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+            <span class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            <span class="empty-star">
+             <i class="fa-solid fa-star "></i>
+            </span>
+            </span>
+          </div>
         </div>
       </div> 
     </section>  
