container are next eachothet done

--- a/index.html
+++ b/index.html
@@ -73,104 +73,116 @@
       </div>
     </div>  
     <!----- Accomodation section ----->
+    <div class="title">
+      <h3>Accomodations in Marseille</h3> 
+    </div>
     <section class="center-container">  
-      <div class="title">
-        <h3>Accomodations in Marseille</h3> 
-      </div>
      <div class="left-container">   
         <div class="col">
             <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-            <h4>Auberge la Cannebeire</h4>
-            <p>Night starting at <strong>25£</strong></p>
+            <div class="col-info">
+              <h4>Auberge la Cannebeire</h4>
+              <p>Night starting at <strong>25£</strong></p>
+            </div>
             <span class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
-            </span>
             <span class="empty-star">
               <i class="fa-solid fa-star "></i>
             </span>
+            </span>
         </div>
         <div class="col">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+          </div>
           <span class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-          </span>
           <span class="empty-star">
             <i class="fa-solid fa-star "></i>
+          </span>
           </span>
         </div>
         <div class="col">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+          </div>
           <span class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-          </span>
           <span class="empty-star">
             <i class="fa-solid fa-star "></i>
+          </span>
           </span>
         </div>
         <div class="col">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+          </div>
           <span class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-          </span>
           <span class="empty-star">
             <i class="fa-solid fa-star "></i>
+         </span>
          </span>
         </div>
         <div class="col">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+          </div>
           <span class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-          </span>
           <span class="empty-star">
             <i class="fa-solid fa-star "></i>
+          </span>
           </span>
         </div>
         <div class="col">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <h4>Auberge la Cannebeire</h4>
-          <p>Night starting at <strong>25£</strong></p>
+          <div class="col-info">
+            <h4>Auberge la Cannebeire</h4>
+            <p>Night starting at <strong>25£</strong></p>
+          </div>
           <span class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-          </span>
           <span class="empty-star">
             <i class="fa-solid fa-star "></i>
           </span>
+        </span>
         </div>
         </div>
       </div>
       <div class="right-container">
         <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <div class="col-info">
+          <div class="col2-info">
             <h4>Auberge la Cannebeire</h4>
             <p>Night starting at <strong>25£</strong></p>
-            <span class="star">
+            <span class="star2">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -183,10 +195,10 @@
         </div>  
         <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <div class="col-info">
+          <div class="col2-info">
             <h4>Auberge la Cannebeire</h4>
             <p>Night starting at <strong>25£</strong></p>
-            <span class="star">
+            <span class="star2">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -199,10 +211,10 @@
         </div>  
         <div class="col-2">
           <img src="assest/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-          <div class="col-info">
+          <div class="col2-info">
             <h4>Auberge la Cannebeire</h4>
             <p>Night starting at <strong>25£</strong></p>
-            <span class="star">
+            <span class="star2">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
