--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
         </div>
-        <div class class="row">
+        <div class="row">
           <div>
             <h3>Find a place for your dream vacation</h3> 
             <p>Downtown or in nature</p>  
@@ -46,20 +46,19 @@
         <div  class="filter_container">
           <h4>Filters</h4>
           <ol class="filters">
-              <li>
-                <label class="filter-label-container">
-                  <i class="fa-solid fa-money-bill-wave"></i>
+              <li class="filter-bar">
+                <i class="fa-solid fa-money-bill-wave"></i>
                 <label>Low Cost</label>
               </li>
-              <li>
+              <li class="filter-bar">
                 <i class="fa-solid fa-person"></i>
                 <label>Family-Friendly</label>
               </li>
-              <li>
+              <li class="filter-bar">
                 <i class="fa-solid fa-heart"></i>
                 <label>Romantic</label>
               </li>
-              <li>
+              <li class="filter-bar">
                 <i class="fa-solid fa-dog"></i>
                 <label>Pets allowed</label>
               </li>
