--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
             </form>
           </div>
         </div>
-        <div  class="filter_container">
-          <h4>Filters</h4>
-          <ol class="filters">
-              <li>
-                <label class="filter-label-container">
-                  <i class="fa-solid fa-money-bill-wave"></i>
-                <label>Low Cost</label>
-              </li>
-              <li>
-                <i class="fa-solid fa-person"></i>
-                <label>Family-Friendly</label>
-              </li>
-              <li>
-                <i class="fa-solid fa-heart"></i>
-                <label>Romantic</label>
-              </li>
-              <li>
-                <i class="fa-solid fa-dog"></i>
-                <label>Pets allowed</label>
-              </li>
-              <li>
-            </ol>    
+
+        <!----- Filters section ----->
+        <section class="sectionFiltres">
+          <h3>Filtres</h3>
+          <div>
+            <div class="filtres">
+              <div class="iconFiltres">
+                <i class="fas fa-money-bill-wave-alt fa-sm"></i>
+              </div>
+            </div>
+            <div class="filtres">
+              <div class="iconFiltres"><i class="fas fa-child fa-sm"></i></div>
+              <p>Familial</p>
+            </div>
+            <div class="filtres">
+              <div class="iconFiltres"><i class="fas fa-heart fa-sm"></i></div>
+              <p>Romantique</p>
+            </div>
+            <div class="filtres">
+              <div class="iconFiltres"><i class="fas fa-dog fa-sm"></i></div>
+              <p>Animaux autorisés</p>
+            </div>
           </div>
-      </div>
+      </section>  
       <div class="parag">
         <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
