filters css changes done

--- a/index.html
+++ b/index.html
@@ -46,24 +46,25 @@
 
         <!----- Filters section ----->
         <section class="sectionFiltres">
-          <h3>Filtres</h3>
+          <h4>Filtres</h4>
           <div>
             <div class="filtres">
               <div class="iconFiltres">
                 <i class="fas fa-money-bill-wave-alt fa-sm"></i>
               </div>
+              <p>Low cost</p>
             </div>
             <div class="filtres">
               <div class="iconFiltres"><i class="fas fa-child fa-sm"></i></div>
-              <p>Familial</p>
+              <p>Family-friendly</p>
             </div>
             <div class="filtres">
               <div class="iconFiltres"><i class="fas fa-heart fa-sm"></i></div>
-              <p>Romantique</p>
+              <p>Romantic</p>
             </div>
             <div class="filtres">
               <div class="iconFiltres"><i class="fas fa-dog fa-sm"></i></div>
-              <p>Animaux autorisés</p>
+              <p>Pets allowed</p>
             </div>
           </div>
       </section>  
